# Reddit-Trend-Copilot

./: .env.example  .gitignore  README.md  dashboard_v2.py  pyproject.toml  requirements.txt
.github/workflows/: streamlit-dashboard-check.yml
configs/: pipeline.toml  sources.json
configs/taxonomy/: product_taxonomy_clean.csv  target_clusters_171.csv
data/processed/: brand_posts_index.pkl  cluster_brand_labels.csv  dashboard_data_500k.pkl  dashboard_manifest.json  forecast_data.pkl  target_cluster_ids.txt
data/processed/archive/: dashboard_weekly_archive.csv  dashboard_weekly_archive.pkl
docs/prompts/: reddit_171_cluster_coverage_prompt.md
scripts/: assign_target_clusters.py  brand_context.py  build_cluster_coverage_report.py  build_dashboard_500k.py  build_embeddings.py  build_forecast.py  export_cluster_brands.py  incremental_update.py  install_local_cron.sh  publish_streamlit_snapshot.py  run_nlp_pipeline.py  scheduled_pipeline.py  scrape_by_target_clusters.py  scrape_large_2026.py
