[project]
name = "trend-detection-copilot-data"
version = "0.1.0"
description = "Stage 1 data collection foundation for an AI Trend Detection Copilot."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "python-dotenv>=1.0",
  "pytrends>=4.9.2",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
